input / button outline fix on mobile

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -52,13 +52,31 @@ body{
 input,button{
     outline: none;
 }
+
+.border-all{
+    border: 1px solid rgba(43, 42, 42, 0.3);
+}
+.border-bold-top{
+    border-top: 2px solid black;
+}
+.border-bold-left{
+    border-left: 2px solid black;
+
+}
+.border-bold-bottom{
+    border-bottom: 2px solid black;
+
+}
+.border-bold-right{
+    border-right: 2px solid black;
+}
 .selected{
     border: 4px solid gold;
     border-radius: 5px;
+    box-sizing:border-box;
 }
 @media screen and (min-width: 320px) and (max-width: 767px){
     .selected{
-        border: 1.5px solid gold;
+        border: 2px solid gold;
     }
 }
-
